# models/Event.js
@@ -1,0 +1,27 @@
+const { DataTypes } = require('sequelize');
+const sequelize = require('../config/db');
+
+const Event = sequelize.define('Event', {
+  title: {
+    type: DataTypes.STRING,
+    allowNull: false
+  },
+  start: {
+    type: DataTypes.DATE,
+    allowNull: false
+  },
+  location: {
+    type: DataTypes.STRING,
+    allowNull: false
+  },
+  type: {
+    type: DataTypes.STRING,
+    allowNull: false
+  },
+  class: {
+    type: DataTypes.STRING,
+    allowNull: false
+  }
+});
+
+module.exports = Event;
